$Id: NEWS,v 1.293 2002-12-03 15:57:24 castaglia Exp $

CVS
---------------------------------
- Bug 1840 - Problem with syslog default destination on HP-UX.  HPUX uses
  a default device of /dev/log.un rather than /dev/log.
- Bug 1844 - DisplayLogin %y macro is off by 1.  Consequence of scoreboarding
  code changes.
- Bug 1838 - Since 1.2.6: in add_useralias() setting flag CF_MERGEDOWN breaks
  aliased anonymous functionality.  The fix was to set the CF_MERGEDOWN flag
  only if the UserAlias directive is not being used in the <Anonymous>
  context.
- Bug 1812 - Double logging lines for ExtendedLog.  No need to merge this
  particular directive down.
- Bug 1848 - undefined reference to `halfdelay'. curses does not seem to
  provide this function, as ncurses does.  The patch works around this by
  using halfdelay() if linking against ncurses, and using nodelay() and sleep()
  if linking against curses.
- Bug 1839 - undefined reference to `get_fs_size'. Expand BSD
  statfs()/statvfs() support beyond FreeBSD.
- Bug 1680 - Error in startup script. Add /usr/local/sbin/ to the included
  rc script's $PATH
- Bug 1852 - Proftpd gets signal 11 on "quote site".  The mod_site module
  was not properly checking the number of parameters for SITE commands.
- Bug 1856 - TimesGMT acts like default is 'off'.  The default for this
  directive was inadvertently set to "off", rather than the documented default
  setting of "on".
- Bug 1853 - SyslogFacility: unable to open syslog.  This turned out to be
  due to the fact that /dev/log on Solaris (and other platforms?) is a
  STREAMS device, which requires open() and putmsg(), rather than connect()
  and send().
- 1846 - File overwrites fail.  Tracked down by Sergei Rozinov to involve
  uninitialized stack data.
- Bug 1861 - 'ftpwho -v -o oneline' print all connections in one line.  This
  bug appeared in 1.2.7rc3, a consequnce of Bug#1815.
- Bug 1868 - Wrong cmdopts in ftpcount.c.

1.2.7rc3 - Released 15-11-2002