@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.293 2002-12-03 15:57:24 castaglia Exp $
+$Id: NEWS,v 1.294 2002-12-04 15:26:25 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -34,6 +34,8 @@ CVS
 - Bug 1861 - 'ftpwho -v -o oneline' print all connections in one line.  This
   bug appeared in 1.2.7rc3, a consequnce of Bug#1815.
 - Bug 1868 - Wrong cmdopts in ftpcount.c.
+- Added custom memory scrubber routine to deal with the issue mentioned in
+  this Bugtraq thread: http://online.securityfocus.com/archive/1/298598
 
 1.2.7rc3 - Released 15-11-2002
 ---------------------------------
